--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-envelope"></i>
-                        <input type="text" placeholder="E-mail">
+                        <input type="email" placeholder="E-mail">
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="text" placeholder="Password">
-                    </div>                   
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <p>Forgot your password? <a href="#">Click here!</a></p>                   
+                </div>
+                <div class="btn-field">
+                    <button type="button">Sign up</button>
+                    <button type="button">Sign in</button>
                 </div>
             </form>
         </div>
