--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Formulário</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
@@ -15,10 +16,10 @@
 <body>
     <div class="container">
         <div class="form-box">
-            <h1>Sign Up</h1>
+            <h1 id="title">Sign Up</h1>
             <form>
                 <div class="input-group">
-                    <div class="input-field">
+                    <div class="input-field" id="nameField">
                         <i class="fa-solid fa-user"></i>
                         <input type="text" placeholder="Name">
                     </div>
@@ -33,8 +34,8 @@
                     <p>Forgot your password? <a href="#">Click here!</a></p>                   
                 </div>
                 <div class="btn-field">
-                    <button type="button">Sign up</button>
-                    <button type="button">Sign in</button>
+                    <button type="button" id="signUpBtn">Sign up</button>
+                    <button type="button" id="signInBtn" class="disabled">Sign in</button>
                 </div>
             </form>
         </div>
