--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="input-group">
                     <div class="input-field" id="nameField">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Nome">
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-envelope"></i>
@@ -29,13 +29,13 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Senha">
                     </div>
-                    <p>Forgot your password? <a href="#">Click here!</a></p>                   
+                    <p>Esqueceu sua senha? <a href="#">Clique aqui!</a></p>                   
                 </div>
                 <div class="btn-field">
                     <button type="button" id="signUpBtn">Sign up</button>
-                    <button type="button" id="signInBtn" class="disabled">Sign in</button>
+                    <button type="button" id="signInBtn" class="disabled">Log in</button>
                 </div>
             </form>
         </div>
